minor improvements while using graphhopper from android